--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "HelpScout Modal Extension",
-  "version": "1.1.0",
+  "version": "1.2",
   "author": "Chris Eggleston",
   "manifest_version": 3,
-  "permissions": ["downloads", "activeTab", "scripting"],
+  "permissions": ["storage", "downloads", "activeTab", "scripting"],
   "background": {
     "service_worker": "background.js"
   },
@@ -23,5 +23,9 @@
     "16": "icon16.png",
     "48": "icon48.png",
     "128": "icon128.png"
+  },
+  "action": {
+      "default_popup": "popup.html",
+      "default_icon": "icon48.png"
   }
 }
